Added OpenGL extensions; updated JavaDocs; ready for upload snapshot; etc.